--- a/PriseEnCharge.html
+++ b/PriseEnCharge.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -58,11 +57,9 @@
 					<p>
 						L’épilepsie est une affection non transmissible chronique du cerveau qui touche 50 millions de personnes dans le monde. Elle se caractérise par des crises récurrentes se manifestant par de brefs épisodes de tremblements involontaires touchant une partie du corps (crises partielles) ou l’ensemble du corps (crises généralisées). Ces crises s’accompagnent parfois d’une perte de conscience et du contrôle de la vessie et de l’évacuation intestinale.
 					</p>
-					<br/>
 					<p>
 						Ces crises résultent de décharges électriques excessives dans un groupe de cellules cérébrales. Ces décharges peuvent se produire dans différentes parties du cerveau. Les crises peuvent varier en intensité, allant de brèves pertes d’attention ou de petites secousses musculaires à des convulsions sévères et prolongées. Leur fréquence est également variable, de moins d’une fois par an à plusieurs fois par jour.
 					</p>
-					<br/>
 					<p>
 						Une crise unique ne signe pas l’épilepsie (jusqu’à 10 % de la population mondiale en a une au cours de la vie). La maladie se définit par la survenue d’au moins deux crises spontanées. C’est l’une des affections les plus anciennement connues de l’humanité, mentionnée dans des documents écrits qui remontent à 4000 avant J.-C. Elle a suscité pendant des siècles la crainte, l’incompréhension, la discrimination et la stigmatisation sociale. La stigmatisation perdure de nos jours dans de nombreux pays et peut avoir des répercussions sur la qualité de vie des personnes atteintes et de leur famille.
 					</p>
@@ -74,7 +71,6 @@
 					<p>
 						La SEP est classiquement décrite comme une maladie débutant chez l’adulte jeune, mais en fonction des études, entre 2-10% des cas débutent avant l’âge de 18 ans. <1% des cas débutent avant l’âge de 10 ans. Comme chez l’adulte, la maladie résulte d’une conjonction entre des facteurs de susceptibilité génétique et environnementaux (le niveau de vitamine D, les infections virales, notamment par le virus EBV, la surcharge pondérale). Des études récentes suggèrent que le régime alimentaire et le microbiote intestinal, l’exposition passive au tabac, l’exposition à la pollution atmosphérique ou aux pesticides pourraient aussi jouer un rôle dans l’émergeance de la maladie.
 					</p>
-					<br/>
 					<p>
 						a SEP pédiatrique présente des spécificités qui lui sont propres et nécessite une prise en charge adaptée. Outre les traitements visant à réduire la neuro-inflammation, il faut aussi prêter une attention particulière au vécu de la maladie ; au suivi du parcours scolaire, avec dépistage d’éventuels troubles cognitifs ; à l’adoption d’une hygiène de vie saine (régime alimentaire équilibré, supplémentation en vit. D et pratique d’une activité physique). Les recherches dans le domaine de la SEP pédiatrique se poursuivent activement pour enrichir nos connaissances et améliorer les traitements dans le futur.
 					</p>
@@ -86,15 +82,12 @@
 					<p>
 						Les troubles du spectre autistique regroupent un ensemble d’affections. Ils sont caractérisés par un certain degré d’altération du comportement social et de la communication. Ces troubles peuvent aussi se manifester par des modes atypiques d’activité et de comportement, notamment des difficultés à passer d’une activité à une autre, une focalisation sur des détails et des réactions inhabituelles aux sensations
 					</p>
-					<br/>
 					<p>
 						Les capacités et les besoins des personnes autistes sont variables et peuvent évoluer au fil du temps. Alors que certaines personnes atteintes d’autisme sont capables de vivre de façon autonome, d’autres souffrent de graves handicaps qui nécessitent des soins et une aide toute leur vie durant. L’autisme a souvent une incidence sur l’éducation et les opportunités d’emploi. De plus, le fardeau porté par les familles apportant les soins et un soutien peut être lourd. Les attitudes sociétales et le soutien apporté par les autorités locales et nationales sont d’importants facteurs qui déterminent la qualité de vie des personnes autistes.
 					</p>
-					<br/>
 					<p>
 						Les caractéristiques de l’autisme peuvent être détectées chez le jeune enfant mais souvent, l’autisme n’est diagnostiqué que bien plus tard.
 					</p>
-					<br/>
 					<p>
 						Les personnes atteintes d’autisme présentent souvent des comorbidités, parmi lesquelles l’épilepsie, la dépression, l’anxiété, un trouble déficitaire de l’attention avec ou sans hyperactivité, ainsi que des comportements difficiles comme des troubles du sommeil et des automutilations. Le niveau de fonctionnement intellectuel est extrêmement variable et peut aller de la déficience profonde à des capacités cognitives supérieures.
 					</p>
@@ -102,19 +95,13 @@
 			</article>
 		</section>
 	</main>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
 	<footer>
 		<div class="ensemble">
 			<div class="objet objet1">
 				<p>Elodie Juvené,
+					<br/>
 					rue du bois brûlé,5
+					<br/>
 					7390 wasmuel</p> 
 			</div>
 			<div class="objet objet2">
@@ -135,9 +122,10 @@
 					<i>
 						Avenue Max Buset, 34 7100 La Louvière
 					<br/>
-						+32 (0)2 477 33 11<a/>
+						+32 (0)2 477 33 11</i>
+				</a>
+			</div>
 		</div>
-
 	</footer>
 
 </body>
