--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,9 @@
 		</div>
 	</nav>
 	<main>
+		<!-- Section principale affichant les publications -->
 		<section>
+			<!-- Premier article contenant une publication -->
 			<article class="conteneur">
 				<div class="publication publication1">
 					<h2>
@@ -67,11 +69,13 @@
 					<h5>
 						J Neurosci Methods. 2024 Mar;403:110052. doi: 10.1016/j.jneumeth.2023.110052. Epub 2023 Dec 25.
 					</h5>
+					<!-- Lien vers le PDF contenue dans le dossier du site avec image de couverture du magazine -->
 					<a  href="Document/Neuroscience.pdf" target="_blank">
 						<img class="magazine" src="Image/Neuroscience.jpg" alt="Image en cours de chargement" title="Neuroscience methods">
 					</a>
 				</div>
 			</article>
+			<!-- deuxième article contenant une publication -->
 			<article class="conteneur">
 
 				<div class="publication publication2"> 
@@ -90,7 +94,7 @@
 					<h5>
 						Epileptic Disord. 2023 Jun;25(3):383-389. doi: 10.1002/epd2.20015. Epub 2023 May 25.
 					</h5>
-
+					<!-- Lien vers le PDF via un lien externe avec image de couverture du magazine-->
 					<a  href="https://onlinelibrary.wiley.com/doi/epdf/10.1002/epd2.20085" target="_blank">
 						<img class="magazine" src="Image/Epileptic.jpg" alt="Image en cours de chargement" title="Epileptic disorders">
 					</a>
@@ -108,7 +112,9 @@
 		<div class="ensemble">
 			<div class="objet objet1">
 				<p>Elodie Juvené,
+					<br/>
 					rue du bois brûlé,5
+					<br/>
 					7390 wasmuel</p> 
 			</div>
 			<div class="objet objet2">
@@ -129,7 +135,9 @@
 					<i>
 						Avenue Max Buset, 34 7100 La Louvière
 					<br/>
-						+32 (0)2 477 33 11<a/>
+						+32 (0)2 477 33 11
+					</i>
+				</a>
 		</div>
 
 	</footer>
