--- a/Contact.html
+++ b/Contact.html
@@ -90,9 +90,6 @@
 						
 					</span>
 				</div>
-
-
-
 				<div>
 						<iframe class="hopitalTivoli"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.0229750446497!2d4.2076091!3d50.477916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c23701c0305385%3A0x9d50acd4f62aa4ba!2sCHU%20Tivoli!5e0!3m2!1sfr!2sbe!4v1749021577737!5m2!1sfr!2sbe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				
@@ -107,8 +104,6 @@
 									C.H.U. Tivoli 
 								</strong> 
 							est un hôpital à vocation universitaire faisant partie intégrante du réseau ULB. Il compte 518 lits aigus agréés. L’activité hospitalière, couvrant toutes les spécialités médicales, est concentrée sur un site unique d’exploitation à La Louvière, ce qui en fait ainsi, en terme d’importance, le 3ème site hospitalier wallon.
-						<br/>
-						<br/>
 							Plusieurs 
 								<strong>
 									parkings 
@@ -129,16 +124,13 @@
 				</div>
 		</section>
 	</main>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
 	<footer>
 		<div class="ensemble">
 			<div class="objet objet1">
 				<p>Elodie Juvené,
+					<br/>
 					rue du bois brûlé,5
+					<br/>
 					7390 wasmuel</p> 
 			</div>
 			<div class="objet objet2">
@@ -159,10 +151,11 @@
 					<i>
 						Avenue Max Buset, 34 7100 La Louvière
 					<br/>
-						+32 (0)2 477 33 11<a/>
-		</div>
-
+						+32 (0)2 477 33 11
+					</i>
+				</a>
+			</div>
+		</div
 	</footer>
-
 </body>
 </html>
