--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<!-- Lien vers la feuille de style externe -->
 	<link rel="stylesheet" href="style.css">
+	 <!-- Règle pour le responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	 <!-- Titre de la page affiché dans l’onglet du navigateur -->
 	<title>Accueil</title>
 </head>
 <body>
+	<!-- en-tête de la page -->
 	<header>
 		<div>	
-
+			<!-- image renvoyant vers la page d'accueil -->
 			<p>	
 				<a class="image" href="index.html">
 					<img src="Image/Image2.png" alt="Image en cours de chargement" title="Accueil">
@@ -29,6 +33,7 @@
 
 		</div>		
 	</header>
+	<!-- Barre de navigation avec 3 liens internes-->
 	<nav>
 		<div class="container">
 			<div class="element element1">
@@ -58,9 +63,6 @@
 					Diplômée en médecine à l'ULB en 2014, après un bachelier à l'UMONS (2010), je me suis tout d'abord spécialisée en pédiatrie (2019) avant de me sur-spécialiser en neuropédiatrie, clôturant mon certificat d'Université en Neurologie Pédiatrique à l'ULB en 2021. Dans un soucis constant d'approfondir mes connaissances, j'ai complété cette formation par un certificat interuniversitaire (ULB, UCL, ULiège) en épileptologie clinique (2020) et un Diplôme d'Etudes Supérieures Inter Universitaires en Maladies neurologiques de l'enfant en France (2023).
 				</p>
 			</article>
-			<br/>
-			<br/>
-			<br/>
 			<article>
 				<h3>
 					Qu'est ce que la neuropédiatrie?
@@ -69,9 +71,6 @@
 					La neuropédiatrie couvre toutes les maladies du système nerveux de l’enfant de 0 à 15 ans inclus telles que l'épilepsie, les troubles du neurodéveloppement d'origine génétique/congénitale (autisme, mutation génétique, ...) ou acquise (IMC, AVC, ...), les troubles des apprentissages (TDAH, TDL ou dysphasie et TDC ou dyspraxie), ainsi que les céphalées primaires (migraines, ...) mais également les maladies neuromusculaires et neuroinflammatoires notamment. Pour certaines de ces maladies, il est parfois nécessaire de travailler en collaboration avec des centres de soins tertiaires (hôpitaux universitaires) en convention.
 				</p>
 			</article>
-			<br/>
-			<br/>
-			<br/>
 			<article>
 
 				<h3>
@@ -84,16 +83,14 @@
 	
 		</section>
 	</main>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
+	<!-- Pied de page -->
 	<footer>
 		<div class="ensemble">
 			<div class="objet objet1">
 				<p>Elodie Juvené,
+					<br/>
 					rue du bois brûlé,5
+					<br/>
 					7390 wasmuel</p> 
 			</div>
 			<div class="objet objet2">
@@ -114,7 +111,10 @@
 					<i>
 						Avenue Max Buset, 34 7100 La Louvière
 					<br/>
-						+32 (0)2 477 33 11<a/>
+						+32 (0)2 477 33 11
+					</i>
+				</a>
+			</div>
 		</div>
 
 	</footer>
