--- a/PriseEnCharge.html
+++ b/PriseEnCharge.html
@@ -64,6 +64,8 @@
 						Une crise unique ne signe pas l’épilepsie (jusqu’à 10 % de la population mondiale en a une au cours de la vie). La maladie se définit par la survenue d’au moins deux crises spontanées. C’est l’une des affections les plus anciennement connues de l’humanité, mentionnée dans des documents écrits qui remontent à 4000 avant J.-C. Elle a suscité pendant des siècles la crainte, l’incompréhension, la discrimination et la stigmatisation sociale. La stigmatisation perdure de nos jours dans de nombreux pays et peut avoir des répercussions sur la qualité de vie des personnes atteintes et de leur famille.
 					</p>
 				</div>
+			</article>
+			<article class="conteneur">
 				<div class="diagnostique">
 					<h3 class="cas">
 						La sclérose en plaques chez l’enfant
@@ -75,6 +77,8 @@
 						a SEP pédiatrique présente des spécificités qui lui sont propres et nécessite une prise en charge adaptée. Outre les traitements visant à réduire la neuro-inflammation, il faut aussi prêter une attention particulière au vécu de la maladie ; au suivi du parcours scolaire, avec dépistage d’éventuels troubles cognitifs ; à l’adoption d’une hygiène de vie saine (régime alimentaire équilibré, supplémentation en vit. D et pratique d’une activité physique). Les recherches dans le domaine de la SEP pédiatrique se poursuivent activement pour enrichir nos connaissances et améliorer les traitements dans le futur.
 					</p>
 				</div>
+			</article>
+			<article class="conteneur">
 				<div>
 					<h3 class="cas">
 						Troubles du spectre autistique
